<resources>
    <string name="app_name">NadaMillas</string>
    <string name="title_activity_new_session">New Session</string>
    <string name="title_activity_new_year">New Year</string>
    <string name="title_activity_edit_session">Edit Session</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_browse">Browse Sessions</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_stats">Statistics</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">Count your swimming sessions!</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Actions -->
    <string name="action_new">New</string>
    <string name="action_browse">Browse</string>
    <string name="action_history">History</string>
    <string name="action_share">Share</string>
    <string name="action_stats">Statistics</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="action_settings">Settings</string>
    <string name="action_modify">Modify</string>
    <string name="action_delete">Delete</string>
    <string name="action_achievements">Achievements</string>
    <string name="take_screenshot">Take screenshot</string>

    <!-- Labels -->
    <string name="label_date">Date</string>
    <string name="label_distance">Distance</string>
    <string name="label_back">Back</string>
    <string name="label_speed">Speed</string>
    <string name="label_target_distance">Target distance</string>
    <string name="label_total_distance">Total distance</string>
    <string name="label_total">total</string>
    <string name="label_average">average</string>
    <string name="label_km">km</string>
    <string name="label_mi">mi</string>
    <string name="label_previous">Previous</string>
    <string name="label_next">Next</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_force_recalculation">Force recalculation</string>
    <string name="label_pool_length">Pool length</string>
    <string name="label_meter">m</string>
    <string name="label_yard">yd</string>
    <string name="label_year">Year</string>
    <string name="label_month">Month</string>
    <string name="label_week">Week</string>
    <string name="label_day">Day</string>
    <string name="label_target">target</string>
    <string name="label_pool">pool</string>
    <string name="label_guess">guess</string>
    <string name="label_open_waters">open waters</string>
    <string name="label_recalculate">recalculate</string>
    <string name="label_distance_units">Distance units</string>
    <string name="label_duration">Duration</string>
    <string name="label_import_from_scratch">Import erasing database</string>
    <string name="label_add_to_database">Import adding to the database</string>
    <string name="label_import_from_internal_backup">Import from internal backup</string>
    <string name="label_import_from_external_backup">Pick a backup file</string>
    <string name="label_first_day_of_week">First day of week</string>
    <string name="label_graph">Graph</string>
    <string name="label_report">Report</string>
    <string name="label_abbrev_open_waters">ow</string>
    <string name="label_laps">Laps</string>
    <string name="label_place">Place</string>
    <string name="label_notes">Notes</string>
    <string name="label_share">Share</string>
    <string name="label_filter">Filter</string>
    <string name="label_operator">Operator</string>
    <string name="label_field">Field</string>
    <string name="label_value">Value</string>
    <string name="label_training">Training</string>
    <string name="label_competition">Competition</string>
    <string name="label_temperature">Temperature</string>

    <!-- Messages -->
    <string name="message_finished">Finished.</string>
    <string name="message_screenshot">Saved screenshot.</string>
    <string name="message_no_day_selected">Please select a day.</string>
    <string name="message_year_info_created">Info for new year created.</string>
    <string name="message_target_updated">Target distance updated.</string>
    <string name="message_internal_error">Internal error.</string>
    <string name="message_io_error">Input/Output error.</string>
    <string name="message_no_number_error">not a number</string>
    <string name="message_file_not_found">File not found.</string>
    <string name="message_unsupported_file_type_error">Unsupported file type.</string>
    <string name="message_objectives_not_editable_now">
        Modifications to the objectives are not allowed after October.
        Keep swimming!!
    </string>

    <!-- Graph types -->
    <string-array name="array_graph_time_types">
        <item>@string/label_day</item>
        <item>@string/label_week</item>
        <item>@string/label_month</item>
        <item>@string/label_year</item>
    </string-array>

    <string-array name="array_graph_mode_types">
        <item>@string/label_distance</item>
        <item>@string/label_temperature</item>
    </string-array>

    <!-- Import options -->
    <string-array name="array_import_options">
        <item>@string/label_import_from_internal_backup</item>
        <item>@string/label_import_from_external_backup</item>
        <item>@string/label_cancel</item>
    </string-array>

    <!-- "How to import" options -->
    <string-array name="array_how_to_import_options">
        <item>@string/label_import_from_scratch</item>
        <item>@string/label_add_to_database</item>
        <item>@string/label_cancel</item>
    </string-array>

    <!-- First day of week -->
    <string name="label_monday">Monday</string>
    <string name="label_sunday">Sunday</string>
    <string-array name="array_first_day_of_week">
        <item>@string/label_monday</item>
        <item>@string/label_sunday</item>
    </string-array>

    <!-- Formatted message strings -->
    <string name="fmt_pool">the pool</string>
    <string name="fmt_ows">open waters</string>
    <string name="fmt_human_readable_info">
        On $date, I swam $distance in $place
    </string>
</resources>
