<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new"
        android:title="@string/action_new"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_browse"
        android:title="@string/action_browse"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_history"
        android:title="@string/action_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stats"
        android:title="@string/action_stats"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
