<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new"
            android:iconTint="#ffffffff"
            android:icon="@drawable/btn_add"
            android:title="@string/action_new" />
        <item
            android:id="@+id/nav_browse"
            android:iconTint="#ffffffff"
            android:icon="@drawable/btn_calendar"
            android:title="@string/action_browse" />
        <item
            android:id="@+id/nav_history"
            android:iconTint="#ffffffff"
            android:icon="@drawable/ic_archive"
            android:title="@string/action_history" />
        <item
            android:id="@+id/nav_stats"
            android:iconTint="#ffffffff"
            android:icon="@drawable/ic_stats"
            android:title="@string/action_stats" />
        <item
            android:id="@+id/nav_settings"
            android:iconTint="#ffffffff"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>

</menu>
