<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HistoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                android:id="@+id/btCloseHistory"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/label_back"
                android:background="#00000000"
                app:srcCompat="?attr/actionModeCloseDrawable"
                app:tint="#ffffffff" />


            <ImageView
                app:srcCompat="@drawable/ic_archive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:tint="#ffffffff"
                android:contentDescription="@string/title_activity_history" />

            <TextView
                android:text="@string/title_activity_history"
                android:textColor="#ffffffff"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton    android:id="@+id/btTakeScrshotForHistory"
                android:layout_gravity="end"
                app:srcCompat="@drawable/btn_camera"
                app:backgroundTint="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="#ffffffff"
                android:contentDescription="@string/take_screenshot"/>

            <ImageButton    android:id="@+id/btShareHstory"
                android:layout_gravity="end"
                app:srcCompat="@drawable/ic_share"
                app:backgroundTint="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/action_share"
                app:tint="#ffffffff" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_history" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="#ffffffff"
        android:contentDescription="@string/action_new"
        app:srcCompat="@drawable/btn_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>