<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditSessionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                android:id="@+id/btCloseEditSession"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/label_back"
                android:background="#00000000"
                app:srcCompat="?attr/actionModeCloseDrawable"
                app:tint="#ffffffff" />

            <ImageView
                app:srcCompat="@drawable/btn_pencil"
                android:contentDescription="@string/title_activity_edit_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:tint="#ffffffff" />

            <TextView   android:id="@+id/lblTitle"
                android:text="@string/title_activity_edit_session"
                android:textColor="#ffffffff"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton    android:id="@+id/btTakeScrshotForEditSession"
                android:contentDescription="@string/message_screenshot"
                android:layout_gravity="end"
                app:srcCompat="@drawable/btn_camera"
                app:backgroundTint="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="#ffffffff" />

            <ImageButton android:id="@+id/btSaveSession"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/label_ok"
                android:layout_gravity="end"
                android:background="#00000000"
                app:srcCompat="@drawable/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="#ffffffff" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_edit_session" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbSaveSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:tint="#ffffffff"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/action_modify"
        app:srcCompat="@drawable/btn_save" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
