<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                app:srcCompat="@drawable/ic_swimming_figure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                tools:ignore="ContentDescription" />

            <TextView   android:id="@+id/lblTitle"
                android:text="@string/app_name"
                android:textColor="#ffffffff"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton    android:id="@+id/btTakeScrshotForSummary"
                android:layout_gravity="end"
                app:srcCompat="@drawable/btn_camera"
                app:backgroundTint="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/take_screenshot"
                app:tint="#ffffffff" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbNew"
        android:contentDescription="@string/action_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="#ffffffff"
        app:srcCompat="@drawable/btn_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbBrowse"
        android:contentDescription="@string/action_browse"
        app:fabSize="mini"
        android:scaleType="center"
        app:useCompatPadding="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/fab_mini_margin"
        android:tint="#ffd0d0d0"
        app:srcCompat="@drawable/btn_calendar"
        app:layout_anchor="@id/fbNew"
        app:layout_anchorGravity="top" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbStats"
        android:contentDescription="@string/action_stats"
        app:fabSize="mini"
        android:scaleType="center"
        app:useCompatPadding="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/fab_mini_margin"
        android:tint="#ffd0d0d0"
        app:srcCompat="@drawable/ic_stats"
        app:layout_anchor="@id/fbBrowse"
        app:layout_anchorGravity="top" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
