<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.HistoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAchievements"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                android:id="@+id/btCloseAchievements"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/label_back"
                android:background="#00000000"
                app:srcCompat="?attr/actionModeCloseDrawable"
                app:tint="#ffffffff" />


            <ImageView
                app:srcCompat="@drawable/ic_achievement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:tint="#ffffffff"
                android:contentDescription="@string/action_achievements" />

            <TextView
                android:text="@string/action_achievements"
                android:textColor="#ffffffff"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton    android:id="@+id/btTakeScrshotForAchievements"
                android:layout_gravity="end"
                app:srcCompat="@drawable/btn_camera"
                app:backgroundTint="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="#ffffffff"
                android:contentDescription="@string/take_screenshot"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ListView   android:id="@+id/lvAllYearInfos"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
