<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StatsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                android:id="@+id/btCloseStats"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/label_back"
                android:background="#00000000"
                app:srcCompat="?attr/actionModeCloseDrawable"
                app:tint="#ffffffff" />

            <ImageView
                app:srcCompat="@drawable/ic_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/title_activity_stats"
                app:tint="#ffffffff" />

            <TextView
                android:text="@string/title_activity_stats"
                android:textColor="#ffffffff"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton    android:id="@+id/btShareStats"
                android:layout_gravity="end"
                app:srcCompat="@drawable/ic_share"
                app:backgroundTint="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/action_share"
                app:tint="#ffffffff" />

            <ImageButton    android:id="@+id/btTakeScrshotForStats"
                android:layout_gravity="end"
                app:srcCompat="@drawable/btn_camera"
                app:backgroundTint="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/take_screenshot"
                app:tint="#ffffffff" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="22dp"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner    android:id="@+id/cbTimeSegment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3" />

            <Spinner    android:id="@+id/cbGrapMonth"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".4" />

            <Spinner    android:id="@+id/cbGraphYear"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3" />
        </LinearLayout>

        <ScrollView
            android:layout_weight=".8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <ImageView  android:id="@+id/ivChartViewer"
                android:contentDescription="@string/title_activity_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>
    </LinearLayout>

</LinearLayout>
